tray: Do not hide the focus rectangle on the user card when it is focused.

When cycling through system tray with tab, there is now a focus
rectangle on the user card when it is clickable (multi user
can be used to test this).

Test: manual
Bug: 769240
Change-Id: Iaeb486a9cfc1ba89a74ba6fb25b533291261a468
Reviewed-on: https://chromium-review.googlesource.com/769162
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#516471}
Former-commit-id: d8563a3c3e82d734a1c6f2da922a6a47e8fdecd5