ash/system/user/user_card_view.cc
@@ -290,9 +290,6 @@ UserCardView::UserCardView(int user_index) : user_index_(user_index) {
   layout->set_cross_axis_alignment(
       views::BoxLayout::CROSS_AXIS_ALIGNMENT_CENTER);
 
-  SetBackground(views::CreateThemedSolidBackground(
-      this, ui::NativeTheme::kColorId_BubbleBackground));
-
   Shell::Get()->media_controller()->AddObserver(this);
 
   const mojom::UserSession* const user_session =
